--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
