--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
