--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -12,11 +12,17 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
+    "install": "^0.13.0",
     "jquery": "^3.7.0",
+    "npm": "^9.7.1",
+    "particles.vue3": "^2.10.1",
     "popper.js": "^1.16.1",
+    "tsparticles": "^2.10.1",
+    "tsparticles-engine": "^2.10.1",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-particles": "^2.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
