--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -17,12 +17,12 @@
     "npm": "^9.7.1",
     "particles.vue3": "^2.10.1",
     "popper.js": "^1.16.1",
-    "tsparticles": "^2.10.1",
+    "three": "^0.134.0",
     "tsparticles-engine": "^2.10.1",
+    "vanta": "^0.5.24",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.2",
-    "vue3-particles": "^2.10.1"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -31,7 +31,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3"
   },
   "eslintConfig": {
     "root": true,
