--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -17,6 +17,7 @@
     "npm": "^9.7.1",
     "particles.vue3": "^2.10.1",
     "popper.js": "^1.16.1",
+    "swiper": "^9.4.0",
     "three": "^0.134.0",
     "tsparticles-engine": "^2.10.1",
     "vanta": "^0.5.24",
