--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
+    "js-cookie": "^3.0.5",
     "npm": "^9.7.1",
     "particles.vue3": "^2.10.1",
     "popper.js": "^1.16.1",
