--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -8,13 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
+    "element-plus": "^2.3.7",
+    "highlight.js": "^11.8.0",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
     "js-cookie": "^3.0.5",
+    "markdown-it": "^13.0.1",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "moment": "^2.29.4",
     "npm": "^9.7.1",
     "particles.vue3": "^2.10.1",
     "popper.js": "^1.16.1",
@@ -24,7 +36,8 @@
     "vanta": "^0.5.24",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -35,7 +48,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
-    "less-loader": "^11.1.3"
+    "less-loader": "^11.1.3",
+    "raw-loader": "^4.0.2"
   },
   "eslintConfig": {
     "root": true,
