--- a/frontend/myfront/package.json
+++ b/frontend/myfront/package.json
@@ -20,12 +20,15 @@
     "js-cookie": "^3.0.5",
     "markdown-it": "^13.0.1",
     "markdown-it-abbr": "^1.0.4",
+    "markdown-it-anchor": "^8.6.7",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-latex": "^0.2.0",
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sub": "^1.0.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "moment": "^2.29.4",
     "npm": "^9.7.1",
     "particles.vue3": "^2.10.1",
@@ -37,7 +40,8 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
-    "vue3-markdown-it": "^1.0.10"
+    "vue3-markdown-it": "^1.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
