--- a/backend/mysite/Dockerfile
+++ b/backend/mysite/Dockerfile
@@ -19,4 +19,5 @@ COPY . /code/
 EXPOSE 8000
 
 # Run Gunicorn server
-CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD gunicorn mysite.wsgi:application --bind 0.0.0.0:8000
+
