--- a/backend/mysite/Dockerfile
+++ b/backend/mysite/Dockerfile
@@ -1,4 +1,4 @@
-# Pull base image
+# Use an official Python runtime as a parent image
 FROM python:3.8
 
 # Set environment variables
@@ -6,18 +6,14 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # Set work directory
-WORKDIR /code
+WORKDIR /app
 
 # Install dependencies
-COPY requirements.txt /code/
-RUN pip install -r requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy project
-COPY . /code/
+COPY . .
 
-# Expose the Gunicorn port
-EXPOSE 8000
-
-# Run Gunicorn server
-CMD gunicorn mysite.wsgi:application --bind 0.0.0.0:8000
-
+# CMD will run when the container is launched
+CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
