--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,11 +9,12 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 
 # Install dependencies
-COPY requirements.txt .
+COPY ./requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy project
-COPY . .
+COPY ./mysite /app/
 
 # CMD will run when the container is launched
 CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
+
