--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker images
+      - name: Build and push Frontend Docker images
         uses: docker/build-push-action@v4
         with:
           context: "{{defaultContext}}:frontend"
           push: true
           tags: moringspeaker/frontend:latest
+          file: Dockerfile
+
+      - name: Build and push Backend Docker images
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:backend"
+          push: true
+          tags: moringspeaker/backend:latest
           file: Dockerfile
 
 
