--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,17 +47,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+#      - name: Install doctl
+#        uses: digitalocean/action-doctl@v2
+#        with:
+#          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Execute remote ssh commands using SSH key
-        uses: appleboy/ssh-action@master
+        uses: invi5H/ssh-action@v1
         with:
-          host: ${{ secrets.DROPLET_IP }}
-          username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.DROPLET_SSH_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_PORT: ${{ secrets.SSH_PORT }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_KEY: ${{ secrets.DROPLET_SSH_KEY }}
           script: |
             docker pull moringspeaker/frontend:latest
             docker pull moringspeaker/backend:latest
