--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,40 +6,40 @@ on:
       - api
 
 jobs:
-  build_and_push:
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Frontend Docker images
-        uses: docker/build-push-action@v4
-        with:
-          context: "{{defaultContext}}:frontend"
-          push: true
-          tags: moringspeaker/frontend:latest
-          file: Dockerfile
-
-      - name: Build and push Backend Docker images
-        uses: docker/build-push-action@v4
-        with:
-          context: "{{defaultContext}}:backend"
-          push: true
-          tags: moringspeaker/backend:latest
-          file: Dockerfile
+#  build_and_push:
+#    runs-on: ubuntu-22.04
+#
+#    steps:
+#      - name: Check out code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v2
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v2
+#
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Build and push Frontend Docker images
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: "{{defaultContext}}:frontend"
+#          push: true
+#          tags: moringspeaker/frontend:latest
+#          file: Dockerfile
+#
+#      - name: Build and push Backend Docker images
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: "{{defaultContext}}:backend"
+#          push: true
+#          tags: moringspeaker/backend:latest
+#          file: Dockerfile
 
 
   deploy:
@@ -47,10 +47,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#      - name: Install doctl
-#        uses: digitalocean/action-doctl@v2
-#        with:
-#          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Execute remote ssh commands using SSH key
         uses: invi5H/ssh-action@v1
@@ -59,9 +55,9 @@ jobs:
           SSH_PORT: ${{ secrets.SSH_PORT }}
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_KEY: ${{ secrets.DROPLET_SSH_KEY }}
-          script: |
-            docker pull moringspeaker/frontend:latest
-            docker pull moringspeaker/backend:latest
-            docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
-            docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
-            docker exec -it my_backend python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('${{ secrets.DJANGO_SUPERUSER_USERNAME }}', '${{ secrets.DJANGO_SUPERUSER_EMAIL }}', '${{ secrets.DJANGO_SUPERUSER_PASSWORD }}')"
+
+      - run: docker pull moringspeaker/frontend:latest
+             docker pull moringspeaker/backend:latest
+             docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
+             docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
+             docker exec -it my_backend python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('${{ secrets.DJANGO_SUPERUSER_USERNAME }}', '${{ secrets.DJANGO_SUPERUSER_EMAIL }}', '${{ secrets.DJANGO_SUPERUSER_PASSWORD }}')"
