--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,40 +6,40 @@ on:
       - api
 
 jobs:
-#  build_and_push:
-#    runs-on: ubuntu-22.04
-#
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
-#
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#
-#      - name: Build and push Frontend Docker images
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: "{{defaultContext}}:frontend"
-#          push: true
-#          tags: moringspeaker/frontend:latest
-#          file: Dockerfile
-#
-#      - name: Build and push Backend Docker images
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: "{{defaultContext}}:backend"
-#          push: true
-#          tags: moringspeaker/backend:latest
-#          file: Dockerfile
+  build_and_push:
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Frontend Docker images
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:frontend"
+          push: true
+          tags: moringspeaker/frontend:latest
+          file: Dockerfile
+
+      - name: Build and push Backend Docker images
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:backend"
+          push: true
+          tags: moringspeaker/backend:latest
+          file: Dockerfile
 
 
   deploy:
