--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,9 @@ jobs:
 
       - run: docker pull moringspeaker/frontend:latest
       - run: docker pull moringspeaker/backend:latest
-      - run: docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
-      - run: docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
+      - name: Display current directory
+      - run: pwd
+            - run: ls -a
+#      - run: docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
+#      - run: docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
 #      - run: docker exec -it my_backend python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('${{ secrets.DJANGO_SUPERUSER_USERNAME }}', '${{ secrets.DJANGO_SUPERUSER_EMAIL }}', '${{ secrets.DJANGO_SUPERUSER_PASSWORD }}')"
