--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,23 +44,22 @@ jobs:
 
   deploy:
     needs: build_and_push
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-
-      - name: Execute remote ssh commands using SSH key
-        uses: invi5H/ssh-action@v1
+      - name: Install SSH key
+        uses: webfactory/ssh-agent@v0.5.2
         with:
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_PORT: ${{ secrets.SSH_PORT }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_KEY: ${{ secrets.DROPLET_SSH_KEY }}
+          ssh-private-key: ${{ secrets.DROPLET_SSH_KEY }}
 
-      - run: docker pull moringspeaker/frontend:latest
-#      - run: docker pull moringspeaker/backend:latest
-      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}  pwd
-      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ls -a
-      - run: find / -name test 2>/dev/null
-#      - run: docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
-#      - run: docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
-#      - run: docker exec -it my_backend python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('${{ secrets.DJANGO_SUPERUSER_USERNAME }}', '${{ secrets.DJANGO_SUPERUSER_EMAIL }}', '${{ secrets.DJANGO_SUPERUSER_PASSWORD }}')"
+      - name: Deploy to Droplet
+        run: |
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} <<'ENDSSH'
+          docker pull moringspeaker/frontend:latest
+          docker pull moringspeaker/backend:latest
+          ls -a
+#          docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
+#          docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
+#          # more commands
+#          ENDSSH
+
