--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           user: ${{ secrets.SSH_USER }} # Remote server user - required
           private_key: ${{ secrets.DROPLET_SSH_KEY }} # Private ssh key registered on the remote server - required
 
-          command: echo 'hello world' && ls -a
+          command: echo 'hello world' && ls -a && pwd
 #          docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
 #          docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
 #          # more commands
