--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,10 @@ jobs:
           user: ${{ secrets.SSH_USER }} # Remote server user - required
           private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
           host_fingerprint: ${{secrets.SSH_PUB}}
-          command: echo 'hello world' && ls -a && pwd
-#          docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
-#          docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
-#          # more commands
-#          ENDSSH
+          command: |
+            echo 'hello world' 
+            ls -a 
+            docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
+            docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
+            echo 'finish container running'
 
