--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,4 +17,5 @@ COPY ./mysite /app/
 
 # CMD will run when the container is launched
 CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
+#CMD ["python", "manage.py", "runserver"]
 
