--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,7 @@ RUN ls -la
 COPY --from=build-deps /usr/src/app/dist /usr/share/nginx/html
 
 # Copy the Nginx configuration file
-COPY ./nginx.conf /etc/nginx/conf.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
