--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,8 +26,8 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html/dist;
-            try_files $uri $uri/ /index.html;
+           root   /usr/share/nginx/html/dist;
+           try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
