--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Deploy to Droplet
+      - name: Deploy Frontend to Droplet
         uses: D3rHase/ssh-command-action@v0.2.2
         with:
           host: ${{ secrets.SSH_HOST }} # Remote server address / ip - required
@@ -56,11 +56,34 @@ jobs:
           private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
           host_fingerprint: ${{secrets.SSH_PUB}}
           command: |
-            echo 'hello world' 
-            ls -a 
-            docker pull moringspeaker/frontend:latest
-            docker pull moringspeaker/backend:latest
-            docker run -d --name my_frontend --env-file ./.env -p 80:80 moringspeaker/frontend:latest
-            docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest
-            echo 'finish container running'
+            docker pull moringspeaker/frontend:latest && 
+            docker run -d --name my_frontend -p 80:80 moringspeaker/frontend:latest &&
+#            docker pull moringspeaker/backend:latest &&
+#            docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest &&
+#            echo 'finish container running'
 
+      - name: Deploy Backend to Droplet
+        uses: D3rHase/ssh-command-action@v0.2.2
+        with:
+          host: ${{ secrets.SSH_HOST }} # Remote server address / ip - required
+          port: ${{ secrets.SSH_PORT }} # Remote server port -  Default: 22 - optional
+          user: ${{ secrets.SSH_USER }} # Remote server user - required
+          private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
+          host_fingerprint: ${{secrets.SSH_PUB}}
+          command: |
+            docker pull moringspeaker/backend:latest &&
+            docker run -d --name my_backend --env-file ./.env -p 8000:8000 moringspeaker/backend:latest &&
+            echo 'container running'
+
+      - name: Execute Backend Commands
+        uses: D3rHase/ssh-command-action@v0.2.2
+        with:
+          host: ${{ secrets.SSH_HOST }} # Remote server address / ip - required
+          port: ${{ secrets.SSH_PORT }} # Remote server port -  Default: 22 - optional
+          user: ${{ secrets.SSH_USER }} # Remote server user - required
+          private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
+          host_fingerprint: ${{secrets.SSH_PUB}}
+          command: |
+            echo "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('${{ secrets.DJANGO_SUPERUSER_USERNAME }}', '${{ secrets.DJANGO_SUPERUSER_EMAIL }}', '${{ secrets.DJANGO_SUPERUSER_PASSWORD }}')" | docker exec -i my_backend python manage.py shell &&
+            echo 'Superuser created'
+            
