--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      -
       - name: Deploy Frontend to Droplet
         uses: D3rHase/ssh-command-action@v0.2.2
         with:
@@ -56,6 +57,7 @@ jobs:
           private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
           host_fingerprint: ${{secrets.SSH_PUB}}
           command: |
+            docker kill $(docker ps -q) || true &&
             docker pull moringspeaker/frontend:latest && 
             docker run -d --name my_frontend -p 80:80 moringspeaker/frontend:latest &&
 #            docker pull moringspeaker/backend:latest &&
