--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,11 @@ FROM python:3.8
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+# Set environment variables for superuser creation
+ENV DJANGO_SU_NAME admin
+ENV DJANGO_SU_EMAIL admin@example.com
+ENV DJANGO_SU_PASSWORD password
+
 # Set work directory
 WORKDIR /app
 
@@ -12,10 +17,13 @@ WORKDIR /app
 COPY ./requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+
 # Copy project
 COPY ./mysite /app/
 
+
 # CMD will run when the container is launched
-CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
-#CMD ["python", "manage.py", "runserver"]
+CMD python mysite/scripts/create_superuser.py && gunicorn mysite.wsgi:application --bind 0.0.0.0:8000
+#CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
+
 
