--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ frontend/myfront/dist
 
 
 # local env files
-frontend/myfront/.env.local
-frontend/myfront/.env.*.local
+#frontend/myfront/.env.local
+#frontend/myfront/.env.*.local
 
 # Log files
 frontend/myfront/npm-debug.log*
@@ -31,10 +31,10 @@ backend/mysite/*.pyc
 backend/mysite/homepage/*.pyc
 backend/mysite/blogs/*.pyc
 backend/mysite/db.sqlite3
-backend/mysite/.env
 backend/mysite/ca-certificate.crt
+backend/.env
+backend/**.env
 
-*.env
 .idea
 **/__pycache__/
 media/
