--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -30,6 +30,10 @@ http {
            try_files $uri $uri/ /index.html;
         }
 
+        location /media/ {
+            alias /usr/src/app/media/;
+        }
+
         location /api/ {
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
