--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,7 +19,7 @@ http {
     server {
         charset utf-8;
         listen       80;
-        server_name 137.184.192.173;
+        server_name  164.90.253.90;
 
         #charset koi8-r;
 
@@ -34,12 +34,12 @@ http {
             alias /usr/src/app/media/;
         }
 
-        location /api/ {
+        location /api {
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_pass http://137.184.192.173;
+            proxy_pass http://127.0.0.1:8000;
         }
 
         #error_page  404              /404.html;
