--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -30,7 +30,7 @@ http {
            try_files $uri $uri/ /index.html;
         }
 
-        location /media/ {
+        location /media {
             alias /usr/src/app/media/;
         }
 
