--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -30,11 +30,11 @@ http {
            try_files $uri $uri/ /index.html;
         }
 
-        location /media {
+        location /media/ {
             alias /usr/src/app/media/;
         }
 
-        location /api {
+        location /api/ {
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
