remember to make migrations EVERY TIME!!!!!!!!!

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,8 @@ jobs:
           command: |
             docker pull moringspeaker/backend:latest &&
             docker run -d --name my_backend --env-file ./.env -p 8000:8000 --mount source=media,target=/app/media moringspeaker/backend:latest &&
+            sleep 20s && # waits 20 seconds &&
+            docker exec my_backend python manage.py makemigrations &&
+            docker exec my_backend python manage.py migrate &&
             echo 'container running'
 
