--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
             docker run -d --name my_backend  --env-file ./.env -p 55673:8000 --network=mynetwork --mount source=media,target=/app/media moringspeaker/backend:latest &&
             sleep 20s && 
             docker exec my_backend python manage.py makemigrations &&
-            docker exec my_backend python manage.py migrate &&
+            docker exec my_backend python manage.py migrate 
 
       - name: Deploy Frontend to Droplet
         uses: D3rHase/ssh-command-action@v0.2.2
