--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,6 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-
       - name: Deploy Backend to Droplet
         uses: D3rHase/ssh-command-action@v0.2.2
         with:
@@ -56,8 +55,10 @@ jobs:
           private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
           host_fingerprint: ${{secrets.SSH_PUB}}
           command: |
+            docker kill $(docker ps -q) || true &&
+            docker rm -f $(docker ps -a -q) || true &&
             docker pull moringspeaker/backend:latest &&
-            docker run -d --name my_backend  --env-file ./.env -p 55673:8000 --network=mynetwork --mount source=media,target=/app/media moringspeaker/backend:latest &&
+            docker run -d --name my_backend  --env-file ./.env -p ${{ secrets.BACKEND_PORT }}:8000 --network=mynetwork --mount source=media,target=/app/media moringspeaker/backend:latest &&
             sleep 20s && 
             docker exec my_backend python manage.py makemigrations &&
             docker exec my_backend python manage.py migrate 
@@ -71,7 +72,5 @@ jobs:
           private_key: ${{ secrets.SSH_PRIVATE_KEY }} # Private ssh key registered on the remote server - required
           host_fingerprint: ${{secrets.SSH_PUB}}
           command: |
-            docker kill $(docker ps -q) || true &&
-            docker rm -f $(docker ps -a -q) || true &&
             docker pull moringspeaker/frontend:latest &&
             docker run -d --name my_frontend --env-file ./.env -p 80:80 --network=mynetwork --mount source=media,target=/usr/src/app/media moringspeaker/frontend:latest
