--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,7 +19,7 @@ http {
     server {
         charset utf-8;
         listen       80;
-        server_name  164.90.253.90;
+        server_name  http://chenyu-site.com;
 
         #charset koi8-r;
 
