--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,4 +74,4 @@ jobs:
           host_fingerprint: ${{secrets.SSH_PUB}}
           command: |
             docker pull moringspeaker/frontend:latest &&
-            docker run -d --name my_frontend --env-file ./.env -p 443:443 --network=mynetwork --mount source=media,target=/usr/src/app/media moringspeaker/frontend:latest
+            docker run -d --name my_frontend --env-file ./.env -p 443:443 -p 80:80 -p 8080:8080 --network=mynetwork --mount source=media,target=/usr/src/app/media moringspeaker/frontend:latest
