--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,8 @@ COPY --from=build-deps /usr/src/app/dist /usr/share/nginx/html/dist
 # Copy the Nginx configuration file
 COPY nginx.conf /etc/nginx/nginx.conf
 
-
 EXPOSE 80
+EXPOSE 8080
+EXPOSE 443
+
 CMD ["nginx", "-g", "daemon off;"]
