--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -46,7 +46,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_pass https://my_backend:8000;
+            proxy_pass http://my_backend:8000;
         }
 
         error_page 500 502 503 504 /50x.html;
