--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,12 +15,16 @@ http {
         listen 80;
         server_name chenyu-site.com;
         return 301 https://$host$request_uri;
+        access_log /var/log/nginx/chenyu-site-http-access.log;
+        error_log /var/log/nginx/chenyu-site-http-error.log;
     }
 
     server {
         charset utf-8;
         listen 443 ssl;
         server_name chenyu-site.com;
+        access_log /var/log/nginx/chenyu-site-https-access.log;
+        error_log /var/log/nginx/chenyu-site-https-error.log;
 
         ssl_certificate /usr/src/app/media/ssl.crt;
         ssl_certificate_key /usr/src/app/media/private.key;
