rewrite blog nav system

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name chenyu-site.com;
+        server_name chenyu-site.com  www.your_domain.com;
         return 301 https://$host$request_uri;
         access_log /var/log/nginx/chenyu-site-http-access.log;
         error_log /var/log/nginx/chenyu-site-http-error.log;
@@ -22,7 +22,7 @@ http {
     server {
         charset utf-8;
         listen 443 ssl;
-        server_name chenyu-site.com;
+        server_name chenyu-site.com  www.chenyu-site.com;
         access_log /var/log/nginx/chenyu-site-https-access.log;
         error_log /var/log/nginx/chenyu-site-https-error.log;
 
