--- a/frontend/myfront/.env
+++ b/frontend/myfront/.env
@@ -1,5 +1,5 @@
 VUE_APP_API_KEY=""
-# VUE_APP_BACKEND_URL=https://chenyu-site.com/
-# VUE_APP_NGINX_STATIC=https://chenyu-site.com/
-VUE_APP_BACKEND_URL=http://127.0.0.1:8000/
-VUE_APP_NGINX_STATIC=http://127.0.0.1:8000/
+VUE_APP_BACKEND_URL=https://chenyu-site.com/
+VUE_APP_NGINX_STATIC=https://chenyu-site.com/
+# VUE_APP_BACKEND_URL=http://127.0.0.1:8000/
+# VUE_APP_NGINX_STATIC=http://127.0.0.1:8000/
